--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "577759cc-b240-492c-9fdf-ba097c131c57"
 authors = ["Ruairidh South <ruairidh.south@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+
 [compat]
 julia = "1.5"
 
