--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
